<resources>
    <string name="app_name">Wherever Taxi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in">Sign In</string>
    <string name="ride_history">Ride History</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="wherever_taxi">Wherever Taxi</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="no_email_provided">No email provided</string>
    <string name="where_to">Where to?</string>
    <string name="go">Go</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_phone_number_can_t_be_changed">Your phone number can\'t be changed.</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="standard">Standard</string>
    <string name="select_car">Select Car</string>
    <string name="cancel_request">Cancel request</string>
    <string name="searching_for_drivers">Searching for drivers</string>
    <string name="ride_accepted">Ride accepted</string>
    <string name="ride_completed">Ride completed</string>
    <string name="submit">Submit</string>
    <string name="rate_your_ride">Rate your ride</string>
    <string name="rate_your_driver">Rate your driver</string>
    <string name="my_rides">My Rides</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="add_card">Add Card</string>
    <string name="secure_code">Secure code</string>
    <string name="expiry_date">Expiry date</string>
    <string name="card_number">Card number</string>
    <string name="pick_up_location">Pick-up location</string>
    <string name="current_location">Current location</string>
</resources>